--- a/distribution.ini
+++ b/distribution.ini
@@ -4,23 +4,59 @@ version=1.0
 about=Kali Linux distribution file
 
 [BookmarksToolbar]
-item.1.type=folder
-item.1.title=OSINT
 item.5.title=Trace Labs
-item.5.link=www.tracelabs.org
-item.10.title=Data breach search - email ID, IP, username, phone number, name, address, VIN
-item.10.link=https://www.dehashed.com/ 
-item.15.title=Email IDs featured in data breaches
-item.15.link=https://haveibeenpwned.com/
-item.20.title=Track Internet connected devices
-item.20.link=https://shodan.io
-item.25.title=Framework/checklist for OSINT work
-item.25.link=https://osintframework.com/
-item.30.title=Web based kanban
+item.5.link=https://www.tracelabs.org
 
+#item.6.type=folder
+#item.6.title=new
+
+#item.10.title=Data breach search - email ID, IP, username, phone number, name, address, VIN
+#item.10.link=https://www.dehashed.com/ 
+
+#item.15.title=Email IDs featured in data breaches
+#item.15.link=https://haveibeenpwned.com/
+
+#item.20.title=Track Internet connected devices
+#item.20.link=https://shodan.io
+
+#item.25.title=Framework/checklist for OSINT work
+#item.25.link=https://osintframework.com/
+
+item.30.title=Web based kanban
 item.30.link=https://trello.com/
-item.35.title=Wireless network mapping
-item.35.link=https://wigle.net/
+
+#item.35.title=Wireless network mapping
+#item.35.link=https://wigle.net/
+
+item.35.type=folder
+item.35.title=Search
+item.35.folderId=2
+
+item.36.type=folder
+item.36.title=Search Country Specific
+item.36.folderId=3
+
+item.37.type=folder
+item.37.title=Search Data
+item.37.folderId=4
+
+item.38.type=folder
+item.38.title=Social Networks
+item.38.folderId=5
+
+item.39.type=folder
+item.39.title=Social Media Tools
+item.39.folderId=6
+
+item.39.type=folder
+item.39.title=Twitter Search
+item.39.folderId=7
+
+item.39.type=folder
+item.39.title=Facebook Search
+item.39.folderId=8
+
+[BookmarksFolder-2]
 item.40.title=Search engine - email ID, URL, IP, bitcoin address etc.
 item.40.link=https://intelx.io/
 item.45.title=Advangle
@@ -61,6 +97,8 @@ item.130.title=Wolfram Alpha
 item.130.link=http://www.wolframalpha.com/
 item.135.title=Yahoo! Search
 item.135.link=http://www.yahoo.com/
+
+[BookmarksFolder-3]
 item.140.title=Alleba (Philippines)
 item.140.link=http://www.alleba.com/
 item.145.title=Baidu (China)
@@ -115,6 +153,8 @@ item.265.title=SearchCode
 item.265.link=https://searchcode.com/
 item.270.title=Draugiem (Latvia)
 item.270.link=https://www.draugiem.lv/
+
+[BookmarksFolder-4]
 item.275.title=Facebook
 item.275.link=http://www.facebook.com/
 item.280.title=Facenama (Iran)
@@ -147,6 +187,8 @@ item.345.title=VKontakte
 item.345.link=https://vk.com/
 item.350.title=Xing
 item.350.link=https://www.xing.com/
+
+[BookmarksFolder-5]
 item.355.title=Audiense
 item.355.link=https://www.audiense.com/
 item.360.title=Bottlenose
@@ -193,6 +235,8 @@ item.460.title=Trackur
 item.460.link=http://www.trackur.com/
 item.465.title=UVRX
 item.465.link=http://www.uvrx.com/social.html
+
+[BookmarksFolder-6]
 item.470.title=Backtweets
 item.470.link=http://backtweets.com/
 item.475.title=Blue Nod
@@ -331,6 +375,8 @@ item.805.title=TWUBS Twitter Chat
 item.805.link=http://twubs.com/twitter-chats
 item.810.title=Schedule Warble
 item.810.link=https://warble.co/
+
+[BookmarksFolder-7]
 item.815.title=Agora Pulse
 item.815.link=http://barometer.agorapulse.com
 item.820.title=Commun.it
@@ -437,8 +483,8 @@ item.1070.title=Family Search
 item.1070.link=https://familysearch.org
 item.1075.title=Family Tree Now
 item.1075.link=http://www.familytreenow.com/
-item.1080.title=Federal Bureau of Prisons - Inmate Locator (US) - Find an inmate that is in the Federal Bureau of Prisons sy
-stem.
+item.1080.title=Federal Bureau of Prisons - Inmate Locator (US) - Find a
+
 item.1080.link=http://www.bop.gov/inmateloc
 item.1085.title=Fold3 (US Military Records) - Browse records of US Military members.
 item.1085.link=http://www.fold3.com
