--- a/distribution.ini
+++ b/distribution.ini
@@ -7,38 +7,15 @@ about=Kali Linux distribution file
 item.5.title=Trace Labs
 item.5.link=https://www.tracelabs.org
 
-#item.6.type=folder
-#item.6.title=new
+item.25.title=OSINT Framework
+item.25.link=https://osintframework.com/
 
-#item.10.title=Data breach search - email ID, IP, username, phone number, name, address, VIN
-#item.10.link=https://www.dehashed.com/ 
-
-#item.15.title=Email IDs featured in data breaches
-#item.15.link=https://haveibeenpwned.com/
-
-#item.20.title=Track Internet connected devices
-#item.20.link=https://shodan.io
-
-#item.25.title=Framework/checklist for OSINT work
-#item.25.link=https://osintframework.com/
-
-item.30.title=Web based kanban
-item.30.link=https://trello.com/
-
-#item.35.title=Wireless network mapping
-#item.35.link=https://wigle.net/
+item.30.title=Trello
+item.30.link=https://trello.com/tracelabs
 
 item.35.type=folder
 item.35.title=Search
 item.35.folderId=2
-
-item.36.type=folder
-item.36.title=Search Country Specific
-item.36.folderId=3
-
-item.37.type=folder
-item.37.title=Search Data
-item.37.folderId=4
 
 item.38.type=folder
 item.38.title=Social Networks
@@ -48,26 +25,55 @@ item.39.type=folder
 item.39.title=Social Media Tools
 item.39.folderId=6
 
-item.39.type=folder
-item.39.title=Twitter Search
-item.39.folderId=7
+item.45.type=folder
+item.45.title=People
+item.45.folderId=12
 
-item.39.type=folder
-item.39.title=Facebook Search
-item.39.folderId=8
+item.48.type=folder
+item.48.title=Company
+item.48.folderId=15
+
+item.49.type=folder
+item.49.title=Domain & IP
+item.49.folderId=16
+
+item.50.type=folder
+item.50.title=Web History
+item.50.folderId=17
+
+
 
 [BookmarksFolder-2]
-item.40.title=Search engine - email ID, URL, IP, bitcoin address etc.
-item.40.link=https://intelx.io/
-item.45.title=Advangle
-item.45.link=http://advangle.com/
-item.50.title=Aol
-item.50.link=http://search.aol.com/
+
+item.36.type=folder
+item.36.title=Search Country Specific
+item.36.folderId=3
+
+item.37.type=folder
+item.37.title=Search Data
+item.37.folderId=4
+
+item.51.type=folder
+item.51.title=Image Search
+item.51.folderId=18
+
+item.52.type=folder
+item.52.title=Video Search
+item.52.folderId=19
+
+item.53.type=folder
+item.53.title=Mapping Search
+item.53.folderId=20
+
+item.8888.title=Advangle
+item.8888.link=http://advangle.com/
+item.9999.title=Aol
+item.9999.link=http://search.aol.com/
 item.55.title=Ask
 item.55.link=http://www.ask.com/
 item.60.title=Bing
 item.60.link=http://www.bing.com/
-item.65.title=DuckDuckGo - an Internet search engine that emphasizes protecting searchers' privacy.
+item.65.title=DuckDuckGo
 item.65.link=https://duckduckgo.com/
 item.70.title=Gigablast
 item.70.link=http://gigablast.com/
@@ -125,6 +131,9 @@ item.195.title=Walla (Israel)
 item.195.link=http://www.walla.co.il/
 item.200.title=Yandex (Russia)
 item.200.link=http://www.yandex.com/
+
+[BookmarksFolder-4]
+
 item.205.title=Authorstream
 item.205.link=http://www.authorstream.com/
 item.210.title=Find-pdf-doc
@@ -154,7 +163,8 @@ item.265.link=https://searchcode.com/
 item.270.title=Draugiem (Latvia)
 item.270.link=https://www.draugiem.lv/
 
-[BookmarksFolder-4]
+[BookmarksFolder-5]
+
 item.275.title=Facebook
 item.275.link=http://www.facebook.com/
 item.280.title=Facenama (Iran)
@@ -188,7 +198,25 @@ item.345.link=https://vk.com/
 item.350.title=Xing
 item.350.link=https://www.xing.com/
 
-[BookmarksFolder-5]
+[BookmarksFolder-6]
+# Social Media Tools
+
+item.40.type=folder
+item.40.title=Twitter Search
+item.40.folderId=7
+
+item.41.type=folder
+item.41.title=Facebook Search
+item.41.folderId=8
+
+item.42.type=folder
+item.42.title=Instagram Search
+item.42.folderId=9
+
+item.43.type=folder
+item.43.title=Vkontake Search
+item.43.folderId=10
+
 item.355.title=Audiense
 item.355.link=https://www.audiense.com/
 item.360.title=Bottlenose
@@ -250,7 +278,7 @@ item.490.link=https://doesfollow.com/
 item.495.title=Fake Follower Check
 item.495.link=https://fakers.statuspeople.com/
 item.500.title=FirstTweet
-item.500.link=https://discover.twitter.com/first-tweet#i_intelligence
+item.500.link=https://discover.twitter.com/first-tweet#i_intelligence/
 item.505.title=First Tweet
 item.505.link=http://ctrlq.org/first
 item.510.title=Foller.me
@@ -419,6 +447,9 @@ item.910.title=Tofo.me
 item.910.link=https://tofo.me
 item.915.title=Worldcam
 item.915.link=http://worldc.am
+
+[BookmarksFolder-8]
+
 item.920.title=Дезертир
 item.920.link=http://vk.com/app3046467
 item.925.title=Barkov.net
@@ -427,7 +458,7 @@ item.930.title=Report Tree
 item.930.link=http://dcpu.ru/vk_repost_tree.php
 item.935.title=Social Stats
 item.935.link=http://socialstats.ru
-item.940.title=Snradar - Search pictures by time and location they were taken
+item.940.title=Snradar
 item.940.link=http://snradar.azurewebsites.net
 item.945.title=Target Hunter
 item.945.link=https://targethunter.net
@@ -437,15 +468,18 @@ item.955.title=VK5
 item.955.link=http://vk5.city4me.com
 item.960.title=VK Community Search
 item.960.link=http://vk.com/communities
-item.965.title=VK Parser - A tool to search for a target audience and potential customers.
+item.965.title=VK Parser 
 item.965.link=http://vkparser.ru
 item.970.title=VK People Search
 item.970.link=http://vk.com/people
 item.975.title=VK to RSS Appspot
 item.975.link=http://vk-to-rss.appspot.com
+
+[BookmarksFolder-11]
+
 item.980.title=Check User Names
 item.980.link=http://www.checkusernames.com
-item.985.title=Knowem - Search for a username on over 500 popular social networks.
+item.985.title=Knowem
 item.985.link=http://www.Knowem.com
 item.990.title=Name Chk
 item.990.link=http://www.namechk.com
@@ -455,6 +489,21 @@ item.1000.title=Name Checkup
 item.1000.link=https://namecheckup.com
 item.1005.title=User Search
 item.1005.link=http://www.usersearch.org
+
+[BookmarksFolder-12]
+
+item.44.type=folder
+item.44.title=User Name Check
+item.44.folderId=11
+
+item.46.type=folder
+item.46.title=Email Search
+item.46.folderId=13
+
+item.47.type=folder
+item.47.title=Phone Numbers
+item.47.folderId=14
+
 item.1010.title=411 (US)
 item.1010.link=http://www.411.com
 item.1015.title=192 (UK)
@@ -483,8 +532,7 @@ item.1070.title=Family Search
 item.1070.link=https://familysearch.org
 item.1075.title=Family Tree Now
 item.1075.link=http://www.familytreenow.com/
-item.1080.title=Federal Bureau of Prisons - Inmate Locator (US) - Find a
-
+item.1080.title=Inmate Locator (US)
 item.1080.link=http://www.bop.gov/inmateloc
 item.1085.title=Fold3 (US Military Records) - Browse records of US Military members.
 item.1085.link=http://www.fold3.com
@@ -566,11 +614,12 @@ item.1275.title=Zabasearch
 item.1275.link=http://www.zabasearch.com
 item.1280.title=Zoominfo
 item.1280.link=http://www.zoominfo.com
+
+[BookmarksFolder-13]
+
 item.1285.title=BriteVerify Email Verification
 item.1285.link=http://www.briteverify.co.uk
-item.1290.title=DeHashed - DeHashed helps prevent ATO with our extensive data set & breach notification solution. Match empl
-oyee and consumer logins against the world’s largest repository of aggregated publicly available assets leaked from third-pa
-rty breaches. Secure passwords before criminals can abuse stolen information, and protect your enterprise.
+item.1290.title=DeHashed
 item.1290.link=https://dehashed.com
 item.1295.title=Email Address Validator
 item.1295.link=http://www.email-validator.net
@@ -584,13 +633,11 @@ item.1315.title=EmailSearch.net
 item.1315.link=http://www.email-search.org/search-emails
 item.1320.title=Email Validator
 item.1320.link=https://chema.ga/emailvalidator/index.php
-item.1325.title=h8mail - Password Breach Hunting and Email OSINT, locally or using premium services. Supports chasing down r
-elated email
+item.1325.title=h8mail
 item.1325.link=https://github.com/khast3x/h8mail
-item.1330.title=Have I Been Pwned - Search across multiple data breaches to see if your email address has been compromised.
+item.1330.title=Have I Been Pwned.
 item.1330.link=https://haveibeenpwned.com
-item.1335.title=Hunter - Hunter lets you find email addresses in seconds and connect with the people that matter for your bu
-siness.
+item.1335.title=Hunter
 item.1335.link=https://hunter.io
 item.1340.title=MailTester
 item.1340.link=http://mailtester.com/testmail.php
@@ -623,6 +670,9 @@ item.1400.title=Twilio - Look up a phone numbers carrier type, location, etc.
 item.1400.link=https://www.twilio.com/lookup
 item.1405.title=Phone Validator - Pretty accurate phone lookup service, particularly good against Google Voice numbers.
 item.1405.link=https://www.phonevalidator.com/index.aspx
+
+[BookmarksFolder-15]
+
 item.1410.title=AllStocksLinks
 item.1410.link=http://www.allstocks.com/links
 item.1415.title=Battle of the Internet Giants
@@ -680,8 +730,7 @@ item.1540.link=http://instantlogosearch.com
 item.1545.title=iSpionage
 item.1545.link=https://www.ispionage.com
 item.1550.title=Knowledge guide to international company registration
-item.1550.link=http://www.icaew.com/en/library/subject-gateways/business-management/company-administration/knowledge-guide-i
-nternational-company-registration
+item.1550.link=http://www.icaew.com/en/library/subject-gateways/business-management/company-administration/knowledge-guide-international-company-registration
 item.1555.title=Linkedin
 item.1555.link=https://www.linkedin.com
 item.1560.title=National Company Registers
@@ -720,10 +769,19 @@ item.1640.title=Vault
 item.1640.link=http://www.vault.com
 item.1645.title=Xing
 item.1645.link=http://www.xing.com
+
 item.1650.title=Accuranker
 item.1650.link=https://www.accuranker.com
-item.1655.title=ahrefs - A tool for backlink research, organic traffic research, keyword research, content marketing & more.
 
+
+[BookmarksFolder-16]
+item.20.title=Track Internet connected devices
+item.20.link=https://shodan.io
+item.15.title=Email IDs featured in data breaches
+item.15.link=https://haveibeenpwned.com/
+item.40.title=Intelx
+item.40.link=https://intelx.io/
+item.1655.title=ahrefs
 item.1655.link=https://ahrefs.com
 item.1660.title=Alexa
 item.1660.link=http://www.alexa.com
@@ -755,8 +813,7 @@ item.1725.title=Domain Tools - Whois lookup and domain/ip historical data.
 item.1725.link=http://whois.domaintools.com
 item.1730.title=Easy whois
 item.1730.link=https://www.easywhois.com
-item.1735.title=Exonera Tor - A database of IP addresses that have been part of the Tor network. It answers the question whe
-ther there was a Tor relay running on a given IP address on a given date.
+item.1735.title=Exonera Tor
 item.1735.link=https://exonerator.torproject.org
 item.1740.title=Follow.net
 item.1740.link=http://follow.net
@@ -816,8 +873,7 @@ item.1875.title=Remote DNS Lookup
 item.1875.link=https://remote.12dt.com
 item.1880.title=Robtex
 item.1880.link=https://www.robtex.com
-item.1885.title=Spyse - Scans entire internet using OSINT and collects all valuable info in its own database: Ipv4 hosts, do
-mains/Meta/Whois, AS, TLS/SSL, Ports/Banners/Protocols, technologies, OS and much other info.
+item.1885.title=Spyse - Scans entire internet using OSINT and collects all valuable info in its own database: Ipv4 hosts, domains/Meta/Whois, AS, TLS/SSL, Ports/Banners/Protocols, technologies, OS and much other info.
 item.1885.link=https://spyse.com/
 item.1890.title=SameID
 item.1890.link=http://sameid.net
@@ -843,8 +899,7 @@ item.1935.title=TCPIPUTILS.com
 item.1935.link=http://www.tcpiputils.com
 item.1940.title=urlQuery
 item.1940.link=http://urlquery.net
-item.1945.title=URLVoid - Analyzes a website through multiple blacklist engines and online reputation tools to facilitate th
-e detection of fraudulent and malicious websites.
+item.1945.title=URLVoid
 item.1945.link=http://www.urlvoid.com
 item.1950.title=Wappalyzer
 item.1950.link=https://wappalyzer.com
@@ -874,6 +929,8 @@ item.2010.title=ViewDNS.info
 item.2010.link=http://viewdns.info
 item.2015.title=You Get Signal
 item.2015.link=http://www.yougetsignal.com
+
+[BookmarksFolder-17]
 item.2020.title=Archive.is
 item.2020.link=http://archive.is
 item.2025.title=BlackWidow
@@ -888,6 +945,8 @@ item.2045.title=Wayback Machine - Explore the history of a website.
 item.2045.link=http://archive.org/web/web.php
 item.2050.title=Wayback Machine Archiver
 item.2050.link=https://github.com/jsvine/waybackpac
+
+[BookmarksFolder-18]
 item.2055.title=7Photos
 item.2055.link=http://7photos.net
 item.2060.title=Baidu Images
@@ -950,6 +1009,9 @@ item.2200.title=JPEGsnoop
 item.2200.link=https://sourceforge.net/projects/jpegsnoop
 item.2205.title=Metapicz
 item.2205.link=http://metapicz.com/
+
+[BookmarksFolder-19]
+
 item.2210.title=Aol Videos
 item.2210.link=http://on.aol.com
 item.2215.title=Bing Videos
@@ -970,7 +1032,6 @@ item.2250.title=Earthcam
 item.2250.link=http://www.earthcam.com
 item.2255.title=Frame by Frame - Browser plugin that allows you to watch YouTube videos frame by frame.
 item.2255.link=https://chrome.google.com/webstore/detail/frame-by-frame-for-youtub/elkadbdicdciddfkdpmaolomehalghio?hl=en-GB
-
 item.2260.title=Geosearch
 item.2260.link=http://www.geosearchtool.com
 item.2265.title=Internet Archive: Open Source Videos
@@ -997,6 +1058,8 @@ item.2315.title=YouTube Data Viewer
 item.2315.link=https://www.amnestyusa.org/citizenevidence
 item.2320.title=ccSUBS - Download Closed Captions & Subtitles from YouTube
 item.2320.link=http://ccsubs.com/
+
+[BookmarksFolder-20]
 item.2325.title=Animaps
 item.2325.link=http://www.animaps.com
 item.2330.title=Atlasify
@@ -1099,6 +1162,8 @@ item.2570.title=View in Google Earth
 item.2570.link=http://www.mgmaps.com/kml/#view
 item.2575.title=Wikimapia
 item.2575.link=http://wikimapia.org
+item.2601.title=Wireless network mapping
+item.2601.link=https://wigle.net/
 item.2580.title=World Aeronautical Database
 item.2580.link=http://worldaerodata.com
 item.2585.title=WorldMap Harvard
