Added extra links & new category

--- a/distribution.ini
+++ b/distribution.ini
@@ -504,6 +504,10 @@ item.47.type=folder
 item.47.title=Phone Numbers
 item.47.folderId=14
 
+item.48.type=folder
+item.49.type=Family
+item.50.type=21
+
 item.1010.title=411 (US)
 item.1010.link=http://www.411.com
 item.1015.title=192 (UK)
@@ -1174,3 +1178,8 @@ item.2595.title=Yahoo Maps
 item.2595.link=https://maps.yahoo.com
 item.2600.title=Zeemaps
 item.2600.link=https://www.zeemaps.com
+
+[BookmarksFolder-21]
+
+item.2600.title=FindAGrave
+item.2600.link=https://www.www.findagrave.com
