Added some additional bookmarks and subcategory
Flight tracking
Mobile device tracking

--- a/distribution.ini
+++ b/distribution.ini
@@ -1064,6 +1064,15 @@ item.2320.title=ccSUBS - Download Closed Captions & Subtitles from YouTube
 item.2320.link=http://ccsubs.com/
 
 [BookmarksFolder-20]
+
+item.50.type=folder
+item.50.title=Flight Tracking
+item.50.folderId=22
+
+item.50.type=folder
+item.50.title=Mobile Device Tracking
+item.50.folderId=23
+
 item.2325.title=Animaps
 item.2325.link=http://www.animaps.com
 item.2330.title=Atlasify
@@ -1183,3 +1192,15 @@ item.2600.link=https://www.zeemaps.com
 
 item.2600.title=FindAGrave
 item.2600.link=https://www.www.findagrave.com
+
+[BookmarksFolder-22]
+
+item.2600.title=ADBSExchange
+item.2600.link=https://www.adsbexchange.com/
+item.2600.title=UK Flightaware
+item.2600.link=http://uk.flightaware.com/adsb/
+
+[BookmarksFolder-23]
+
+item.2600.title=OpenCellID
+item.2600.link=https://opencellid.org/
